<resources>
    <string name="app_name">Just Services</string>
    <string name="sign_in">Sign In</string>
    <string name="username">Username</string>
    <string name="enter_password">Enter Password</string>
    <string name="dont_have_account_msg">You don’t Have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="email">Email Address</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="confirm_signup">By clicking you are agreed to out Terms &amp; Conditions</string>
    <string name="have_account">Already! Have an account?</string>
    <string name="email_error">Please fill Email Field.</string>
    <string name="password_error">Please fill Password Field.</string>
    <string name="userName_error">Please fill Username Field.</string>
    <string name="confirmPassword_error">Please fill ConfirmPassword Field.</string>
    <string name="matchPassword_error">Passwords not matching.</string>
    <string name="terms_error">You have to accept out terms.</string>
    <string name="select_category">Select Your Category</string>
    <string name="student">Student</string>
    <string name="expert">Expert</string>
    <string name="bus_driver">Bus Driver</string>
    <string name="profile">Profile</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="age">Age</string>
    <string name="gender">Gender</string>
    <string name="academic_year">Academic Year</string>
    <string name="major">Major</string>
    <string name="bio">Bio</string>
    <string name="bus_number">Bus Number</string>
    <string name="create">Create</string>
    <string name="empty_field_error">Please fill all the Fields.</string>
    <string name="explore_majors">Explore Majors</string>
    <string name="ask_an_expert">Ask an Expert</string>
    <string name="bus_schedule">Bus Schedule</string>
    <string name="add_trip">Add a Trip</string>
    <string name="add_trip_txt">Add Trip</string>
    <string name="edit_trip">Edit Trip</string>
    <string name="my_bus_schedule">My bus schedule</string>
    <string name="guidance_request">Guidance Request</string>
    <string name="schedule">Schedule</string>
    <string name="note">Notes</string>
    <string name="experts_list">Experts List</string>
    <string name="send_request">Send a Request</string>
    <string name="text_message">Text Message</string>
    <string name="city">City</string>
    <string name="Station">Station</string>
    <string name="departure_date">Departure Date</string>
    <string name="departure_time">Departure Time</string>
    <string name="dot">:</string>
    <string name="userType">Type</string>
    <string name="userType_error_mg">Please select type.</string>
    <string name="verify_email_msg">Please verify your email.</string>
    <string name="resend_link">Resend verify link?</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="chat">Chat</string>
    <string name="bus_trip_schedule">Bus Trip Schedule</string>
    <string name="accept">Accept</string>
    <string name="add_note">Add note</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="reset_password">Reset password</string>
    <string name="check_email_msg">Please check your email.</string>
    <string name="friend_request">Guidance Request</string>
    <string name="chat_notification">New Message</string>
    <string name="notifications">Notifications</string>
    <string name="major2">Major: </string>
    <string name="bio2">Bio: </string>
    <string name="age2">Age: </string>
    <string name="gender2">Gender: </string>
    <string name="academic_year2">Academic Year: </string>
    <string name="bus_number2">Bus Number: </string>
    <string name="logout">Logout</string>
    <string name="account_info">Account Info</string>

</resources>